[package]
name = "module_db"
version = "0.1.0"
edition = "2021"

[dependencies]
farc = { git = "https://github.com/vixen256/farc", default-features = false }
itertools = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_divatree = { git = "https://github.com/vixen256/serde_divatree" }
serde_with = { version = "3.12", features = ["macros"] }
toml = "0.8"
utoipa = { version = "5.4", optional = true }
